[gd_scene load_steps=6 format=3 uid="uid://b6pfwckjrtlrv"]

[ext_resource type="Theme" uid="uid://de5o7pp6f0xwq" path="res://resources/UIBase.tres" id="1_mlsba"]
[ext_resource type="Script" uid="uid://dd6hotg6yl8wm" path="res://scenes/components/gui.gd" id="2_67e57"]

[sub_resource type="Animation" id="Animation_vmhj3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_67e57"]
resource_name = "pulse"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.5, 1.5), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p8o8g"]
_data = {
&"RESET": SubResource("Animation_vmhj3"),
&"pulse": SubResource("Animation_67e57")
}

[node name="GUI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 384.0
offset_bottom = 192.0
mouse_filter = 1
theme = ExtResource("1_mlsba")
script = ExtResource("2_67e57")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 384.0
offset_bottom = 168.0
theme = ExtResource("1_mlsba")

[node name="Round" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 16.0
offset_top = 8.0
offset_right = 160.0
offset_bottom = 56.0
theme = ExtResource("1_mlsba")
theme_type_variation = &"LabelInfo"
theme_override_font_sizes/font_size = 22
text = "Round"

[node name="Label2" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 16.0
offset_top = 64.0
offset_right = 104.0
offset_bottom = 96.0
theme = ExtResource("1_mlsba")
theme_type_variation = &"LabelData"
text = "Rolls"

[node name="Label3" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 16.0
offset_top = 96.0
offset_right = 104.0
offset_bottom = 128.0
theme = ExtResource("1_mlsba")
theme_type_variation = &"LabelData"
text = "Hands"

[node name="Label4" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 16.0
offset_top = 128.0
offset_right = 104.0
offset_bottom = 160.0
theme = ExtResource("1_mlsba")
theme_type_variation = &"LabelData"
text = "Score"

[node name="Rolls" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 112.0
offset_top = 64.0
offset_right = 200.0
offset_bottom = 96.0
theme = ExtResource("1_mlsba")
text = "0"

[node name="Hands" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 112.0
offset_top = 96.0
offset_right = 200.0
offset_bottom = 128.0
theme = ExtResource("1_mlsba")
text = "0"

[node name="Score" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 112.0
offset_top = 128.0
offset_right = 200.0
offset_bottom = 160.0
theme = ExtResource("1_mlsba")
text = "0"

[node name="Roll" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 224.0
offset_top = 8.0
offset_right = 376.0
offset_bottom = 56.0
text = "Roll"

[node name="PlayHand" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 224.0
offset_top = 64.0
offset_right = 376.0
offset_bottom = 112.0
text = "Play Hand"

[node name="AddScore" type="Control" parent="Panel"]
visible = false
layout_mode = 2
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Add" type="Label" parent="Panel/AddScore"]
layout_mode = 2
offset_left = 208.0
offset_top = 128.0
offset_right = 288.0
offset_bottom = 160.0
pivot_offset = Vector2(72, 16)
theme = ExtResource("1_mlsba")
text = "0"
horizontal_alignment = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Panel/AddScore/Add"]
libraries = {
&"": SubResource("AnimationLibrary_p8o8g")
}

[node name="X" type="Label" parent="Panel/AddScore"]
layout_mode = 2
offset_left = 288.0
offset_top = 128.0
offset_right = 312.0
offset_bottom = 160.0
theme = ExtResource("1_mlsba")
theme_type_variation = &"LabelData"
text = "x"
horizontal_alignment = 1

[node name="Mult" type="Label" parent="Panel/AddScore"]
layout_mode = 2
offset_left = 312.0
offset_top = 128.0
offset_right = 376.0
offset_bottom = 160.0
pivot_offset = Vector2(8, 16)
theme = ExtResource("1_mlsba")
theme_type_variation = &"LabelInfo"
text = "1"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Panel/AddScore/Mult"]
libraries = {
&"": SubResource("AnimationLibrary_p8o8g")
}

[connection signal="pressed" from="Panel/Roll" to="." method="_on_roll_pressed"]
[connection signal="pressed" from="Panel/PlayHand" to="." method="_on_play_hand_pressed"]
